Fix facebook overflow on mobile

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -126,3 +126,8 @@ a{
     justify-content: space-between;
   }
 }
+
+// FACEBOOK LIKE MOBILE FIX
+.fb_iframe_widget{
+  overflow: hidden !important;
+}
